# detnetctl

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  TODOqcw.txt  build.rs  clippy.toml  qcw2taprio.md
.github/workflows/: github-actions.yml
LICENSES/: 0BSD.txt  GPL-3.0-or-later.txt  LicenseRef-IEEE-YANG.txt
config/dbus/: detnetctl.conf
config/yaml/: bridged.yml  bridged_detnet.yml  bridged_frer.yml  example.yml  unbridged.yml
config/yang/: example.json  ieee802-dot1q-sched@2024-01-30.yang  ieee802-dot1q-sched@2024-01-30.yang.license  ietf-detnet@2024-01-16.yang  ietf-detnet@2024-01-16.yang.license  ingress.json  qcw.json  qcw.json.license  tsn-interface-configuration.yang
examples/: Makefile
examples/common/: ptp_status.c  ptp_status.h  registration.c  registration.h
examples/simple/: .gitignore  Makefile  simple.c
examples/timestamps/: .gitignore  Makefile  README.md  analyze.py  client.c  client_loop.c  client_loop.h  communication.c  communication.h  realtime.c  realtime.h  server.c
examples/utils/: .gitignore  Makefile  enable_hw_timestamps.c  queues.sh  traffic.cfg  traffic.cfg.license  traffic.sh
src/: lib.rs  main.rs
src/bpf/: helpers.bpf.h  mocks.rs  mod.rs  stream_identification.bpf.h  vmlinux.h  vmlinux.h.license
src/configuration/: detnet.rs  doctest.rs  mod.rs  pcp.rs  schedule.rs  taprio.rs
src/configuration/merged/: mod.rs
src/configuration/merged/replace_none_options_derive/: Cargo.toml
src/configuration/merged/replace_none_options_derive/src/: lib.rs
src/configuration/options_struct_derive/: Cargo.toml
src/configuration/options_struct_derive/src/: lib.rs
src/configuration/sysrepo/: helper.rs  mocks.rs  mod.rs  qcw.rs  test-egress-successful.json  test-ingress-successful.json  test-missing-time-aware-offset.json  test-successful.json  test-successful.json.license  test-without-ip.json
src/configuration/sysrepo/helper/: mocks.rs  mod.rs
src/configuration/yaml/: mod.rs
src/controller/: mod.rs
src/data_plane/: mod.rs
src/data_plane/bpf/: data_plane.bpf.c  frer.bpf.h  mocks.rs  mod.rs  postprocessing.bpf.c
src/dispatcher/: mod.rs
src/dispatcher/bpf/: dispatcher.bpf.c  mocks.rs  mod.rs  network_dispatcher.bpf.c
src/facade/: mod.rs
src/facade/dbus/: mocks.rs  mod.rs
src/guard/: mod.rs
src/guard/bpf/: mocks.rs  mod.rs  network_guard.bpf.c  socket_token.h
src/interface_setup/: iproute2.rs  mod.rs  netlink.rs
src/nic_setup/: detd.rs  mod.rs
src/ptp/: mod.rs  model.rs  ptp_manager.rs
src/queue_setup/: detd.rs  detdipc.proto  mod.rs  taprio.rs
