# SPDX-FileCopyrightText: 2023 Linutronix GmbH
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "detnetctl"
description = "A TSN/DetNet Node Controller with Interference Protection"
version = "0.1.0"
edition = "2021"
authors = ["Florian Kauer <florian.kauer@linutronix.de>"]
license = "GPL-3.0-or-later"

[features]
default = ["dbus", "bpf", "detd", "sysrepo", "netlink", "ptp"]
dbus = ["dep:dbus", "dep:dbus-crossroads", "dep:dbus-tokio", "dep:async-shutdown"]
bpf = ["dep:libbpf-rs", "dep:libbpf-cargo", "dep:log", "dep:nix"]
detd = ["dep:bytes", "dep:prost"]
sysrepo = ["dep:sysrepo", "dep:yang2", "dep:ipnet"]
netlink = ["dep:rtnetlink","dep:ethtool","dep:netlink-packet-route"]
ptp = ["dep:bincode","dep:nix","dep:ethtool"]

[dependencies]
anyhow = "1.0"
tokio = {version = "1.0", features=["rt", "net", "macros", "sync", "signal", "time", "process"]}
async-trait = { version = "0.1.67" }
eui48 = "1.1.0"
env_logger = "0.10.0"
num-traits = "0.2"
flagset = "0.4.3"
num-derive = "0.2"
chrono = "0.4.24"
rand = "0.8.5"
regex = "1.8.4"
semver = "1.0.21"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9" }
serde_repr = "0.1"

clap = { version = "4.2.0", features = ["derive","wrap_help","cargo"] }

futures = "0.3.11"

# Automatically derive ReplaceNoneOptions trait
# Needs to be in a separate crate since it is a proc-macro
replace_none_options_derive = { path = "src/configuration/merged/replace_none_options_derive" }

### dbus feature
# From github to include the set_sender feature just merged TODO replace when released
dbus = { git = "https://github.com/diwic/dbus-rs", branch = "master", optional = true }
dbus-crossroads = { git = "https://github.com/diwic/dbus-rs", branch = "master", optional = true }
dbus-tokio = { git = "https://github.com/diwic/dbus-rs", branch = "master", optional = true }

async-shutdown = { version = "0.1.2", optional = true }

### bpf feature
libbpf-rs = { version = "0.21.2", optional = true }
log = { version = "0.4.17", optional = true }
nix = { version = "0.24", default-features = false, features = ["net", "user", "time", "poll"], optional = true }

### detd feature
bytes = { version = "1.4.0", optional = true }
prost = { version = "0.11.6", optional = true }

### sysrepo feature
sysrepo = { version = "0.4.0", optional = true }
yang2 = { version = "0.7", optional = true }
ipnet = { version = "2.7.2", optional = true }

### netlink feature
rtnetlink = { version = "0.13.1", optional = true }
ethtool = { version = "0.2.5", optional = true }
netlink-packet-route = { version = "0.17.0", optional = true }

### ptp feature
bincode = { version = "1.3.3", optional = true }

### for detnetctl-run

[build-dependencies]
### bpf feature
libbpf-cargo = { version = "0.21.2", optional = true }

### detd feature
prost-build = "0.11.6"

[dev-dependencies]
mockall = "0.11.3"
tokio-test = "0.4.2"
tempfile = "3.4.0"
const_format = "0.2.32"

[[bin]]
name = "detnetctl-run"
required-features = ["dbus"]
